# rocm-ninodes

./: .cursorrules  .gitignore  ARCHITECTURE.md  Benchmarks.md  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  NEXT_STEPS.md  OPTIMIZATION_PROGRESS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIX_SUMMARY.md  PHASE2_STARTING_PROMPT.md  PROJECT_SUMMARY.md  README.md  README_TESTING.md  REFACTORING_SUMMARY.md  ROCM_SETTINGS.md  RULES.md  TESTING.md  TESTING_GUIDE.md  VAE_OPTIMIZATION_PLAN.md  __init__.py  analyze_baseline.py  benchmark_phase1.py  collect_test_data.py  comfyui_manager.json  comfyui_workflow_tester.py  create_node_files.py  create_optimization_plan.py  debug_config.py  debug_performance.py  debug_vae_decode.py  disable_instrumentation.py  emergency_fix.py  example_workflow.json  example_workflow_wan_video.json  fix_pagination.bat  fix_pagination.ps1  (+27 more)
.cursor/rules/: code-organization.mdc  code-quality.mdc  comfyui-patterns.mdc  environment-management.mdc  naming-conventions.mdc  quick-reference.mdc  rocm-optimizations.mdc  testing.mdc
benchmarks/: run_benchmarks.py
comfyui_workflows/: basic_image.json  batch_processing.json  comprehensive_test_info.json  performance_comparison.json  video_processing.json
docs/: CATEGORY_VERIFICATION.md  CHECKPOINT_CACHE_API.md  CHECKPOINT_LOADER_UPDATE.md  COMPLETE_NAMING_FIX.md  LOADER_NODES_GUIDE.md  LOADER_NODES_SUMMARY.md  LTX2_PROMPT_NODE.md  NAMING_AND_FIXES_UPDATE.md  SAMPLER_CUSTOM_ADVANCED.md  TROUBLESHOOTING_NOISE.md  UNET_LOADER_ADDED.md  WORKFLOW_UPDATE_SUMMARY.md
rocm_nodes/: __init__.py  constants.py  nodes.py
rocm_nodes/core/: __init__.py  checkpoint.py  gguf_loader.py  lora.py  monitors.py  sampler.py  textgen_ltx2.py  unet_loader.py  vae.py
rocm_nodes/utils/: __init__.py  architecture.py  debug.py  diagnostics.py  memory.py  quantization.py
scripts/: update_workflows.py
test_data/: README.md  analysis_results.json  optimization_recommendations.json
test_data/benchmarks/: ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143899828_1760143899828.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143899829_1760143899829.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143899830_1760143899830.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143899831_1760143899831.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143899832_1760143899832.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143899833_1760143899833.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143899834_1760143899834.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143899835_1760143899835.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143923194_1760143923194.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143923195_1760143923195.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143923196_1760143923196.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143923197_1760143923197.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143923198_1760143923198.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143923199_1760143923199.json  ROCMOptimizedVAEDecodeV2Instrumented_ROCMOptimizedVAEDecodeV2Instrumented_1760143923200_1760143923200.json  (+54 more)
test_data/optimization/: baseline_metrics.json  optimization_plan.json  (+1 more)
tests/: __init__.py  conftest.py  run_tests.py  run_tests.sh  test_channel_support.py  test_comfyui_compatibility.py  test_correctness.py  test_data_analysis.py  test_fixtures.py  test_integration.py  test_integration_flux.py  test_integration_wan.py  test_performance.py  test_pil_compatibility_fix.py  test_pil_diagnostics.py  test_process_output_issue.py  test_real_data.py  test_simple_tensor_format.py  test_tensor_format_diagnosis.py  test_vae_pipeline.py
tools/: upgrade_to_v2.py
web/: rocm-nino-info.js  rocm-nino.js
(+14 files in other folders)
