[project]
name = "rocm-ninodes"
description = "ROCM Optimized Nodes for ComfyUI - High-performance VAE decode and sampling nodes specifically tuned for AMD GPUs with ROCm support, particularly targeting gfx1151 architecture"
version = "1.0.4"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.20.0",
    "Pillow>=8.0.0",
]

[project.urls]
Repository = "https://github.com/iGavroche/rocm-ninodes"

[tool.comfy]
PublisherId = "igavroche"
DisplayName = "RocM Ninodes"
Icon = "https://raw.githubusercontent.com/iGavroche/rocm-ninodes/refs/heads/main/icon.jpg"